cif/org.eclipse.escet.cif.tests/tests/checks/VarNoContinuousCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  ----------------------------------------
  (1/1) Variable is a continuous variable.
  ----------------------------------------
   * In the top-level scope of the specification:
     - cont c der 1.0;
            ^
   * In automaton "a":
     - cont c der 1.0;
            ^
   * In group "g":
     - cont c;
            ^
